--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -1,4 +1,7 @@
 {
     "welcome": "ยินดีต้อนรับ !",
-    "loginOrRegis": "ลงชื่อเข้าใช้หรือสมัครด้วยเบอร์โทรศัพท์"
+    "loginOrRegis": "ลงชื่อเข้าใช้หรือสมัครด้วยเบอร์โทรศัพท์",
+    "logOrRe": "ลงชื่อเข้าใช้หรือสมัคร",
+    "toSendPhone": "เพื่อส่งรหัสเข้าเบอร์มือถือของคุณ",
+    "sendBySMS": "ส่งผ่านทาง SMS"
 }
