--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -3,5 +3,6 @@
     "loginOrRegis": "ลงชื่อเข้าใช้หรือสมัครด้วยเบอร์โทรศัพท์",
     "logOrRe": "ลงชื่อเข้าใช้หรือสมัคร",
     "toSendPhone": "เพื่อส่งรหัสเข้าเบอร์มือถือของคุณ",
-    "sendBySMS": "ส่งผ่านทาง SMS"
+    "sendBySMS": "ส่งผ่านทาง SMS",
+    "errorPhoneNum": "รูปแบบเบอร์โทรศัพท์ไม่ถูกต้อง"
 }
