--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -4,5 +4,11 @@
     "logOrRe": "ลงชื่อเข้าใช้หรือสมัคร",
     "toSendPhone": "เพื่อส่งรหัสเข้าเบอร์มือถือของคุณ",
     "sendBySMS": "ส่งผ่านทาง SMS",
-    "errorPhoneNum": "รูปแบบเบอร์โทรศัพท์ไม่ถูกต้อง"
+    "errorPhoneNum": "รูปแบบเบอร์โทรศัพท์ไม่ถูกต้อง",
+    "phoneVerification": "ยืนยันเบอร์โทรศัพท์",
+    "pleasePutCode": "กรุณาใส่รหัส 6 ตัวที่ส่งไปยัง:",
+    "sendCodeAgain": "ส่งรหัสยืนยันอีกครั้ง",
+    "sendCodeAgainIn": "ส่งรหัสยืนยันอีกครั้งใน ",
+    "cont": "ต่อไป",
+    "errorVerificationCode": "รหัสยืนยันไม่ถูกต้อง"
 }
