--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -10,5 +10,19 @@
     "sendCodeAgain": "ส่งรหัสยืนยันอีกครั้ง",
     "sendCodeAgainIn": "ส่งรหัสยืนยันอีกครั้งใน ",
     "cont": "ต่อไป",
-    "errorVerificationCode": "รหัสยืนยันไม่ถูกต้อง"
+    "errorVerificationCode": "รหัสยืนยันไม่ถูกต้อง",
+    "register": "สมัครสมาชิก",
+    "yourNum": "เบอร์โทรศัพท์ของคุณคือ ",
+    "whatDescYou": "คุณคือใคร?",
+    "t_a": "ผู้ฝึกสอน / ผู้ดูแลระบบ",
+    "s_c": "นักเรียน / ลูกค้า",
+    "enterInfo": "โปรดใส่ข้อมูลส่วนตัวของคุณ",
+    "step": "ขั้นตอนที่",
+    "name": "ชื่อ",
+    "age": "อายุ",
+    "gender": "เพศ",
+    "confirm": "ยืนยัน",
+    "male": "ชาย",
+    "female": "หญิง",
+    "others": "อื่นๆ"
 }
