implement firebase login logic & send new user to register screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,5 +24,10 @@
     "confirm": "Confirm",
     "male": "Male",
     "female": "Female",
-    "others": "Others"
+    "others": "Others",
+    "sthWentWrong": "Something went wrong",
+    "errorInvalidPhoneNum": "Invalid phone number, please use differrent number.",
+    "loading": "Loading",
+    "verifyingPhone": "Verifying phone number",
+    "signingIn": "Signing in"
 }
