--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -29,5 +29,7 @@
     "errorInvalidPhoneNum": "เบอร์โทรศัพท์ไม่ถูกต้อง, กรุณาใช้หมายเลขอื่น",
     "loading": "กำลังดำเนินการ",
     "verifyingPhone": "กำลังยืนยันเบอร์โทร",
-    "signingIn": "กำลังเข้าสู่ระบบ"
+    "signingIn": "กำลังเข้าสู่ระบบ",
+    "agreeToTerms": "ยอมรับเงื่อนไข",
+    "byChecking": "ฉันได้อ่านและยอมรับเงื่อนไขทั้งหมด"
 }
