--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -31,5 +31,7 @@
     "verifyingPhone": "กำลังยืนยันเบอร์โทร",
     "signingIn": "กำลังเข้าสู่ระบบ",
     "agreeToTerms": "ยอมรับเงื่อนไข",
-    "byChecking": "ฉันได้อ่านและยอมรับเงื่อนไขทั้งหมด"
+    "byChecking": "ฉันได้อ่านและยอมรับเงื่อนไขทั้งหมด",
+    "errorBlank": "โปรดกรอกข้อมูลให้ครบทุกช่อง",
+    "signingUp": "กำลังลงทะเบียน"
 }
