--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -15,7 +15,7 @@
     "yourNum": "เบอร์โทรศัพท์ของคุณคือ ",
     "whatDescYou": "คุณคือใคร?",
     "t_a": "ผู้ฝึกสอน / ผู้ดูแลระบบ",
-    "s_c": "นักเรียน / ลูกค้า",
+    "s_c": "นักเรียน / สมาชิก",
     "enterInfo": "โปรดใส่ข้อมูลส่วนตัวของคุณ",
     "step": "ขั้นตอนที่",
     "name": "ชื่อ",
@@ -33,5 +33,6 @@
     "agreeToTerms": "ยอมรับเงื่อนไข",
     "byChecking": "ฉันได้อ่านและยอมรับเงื่อนไขทั้งหมด",
     "errorBlank": "โปรดกรอกข้อมูลให้ครบทุกช่อง",
-    "signingUp": "กำลังลงทะเบียน"
+    "signingUp": "กำลังลงทะเบียน",
+    "loadingUserData": "กำลังโหลดข้อมูลผู้ใช้"
 }
