--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -34,5 +34,12 @@
     "byChecking": "ฉันได้อ่านและยอมรับเงื่อนไขทั้งหมด",
     "errorBlank": "โปรดกรอกข้อมูลให้ครบทุกช่อง",
     "signingUp": "กำลังลงทะเบียน",
-    "loadingUserData": "กำลังโหลดข้อมูลผู้ใช้"
+    "loadingUserData": "กำลังโหลดข้อมูลผู้ใช้",
+    "signOut": "ออกจากระบบ",
+    "lang": "ภาษา",
+    "changeLang": "เปลี่ยนภาษา",
+    "changingLang": "กำลังเปลี่ยนภาษา",
+    "home": "หน้าหลัก",
+    "profile": "โปรไฟล์",
+    "search": "ค้นหา"
 }
