init admin mygym screen & fix change lang styling

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -41,5 +41,6 @@
     "changingLang": "Changing language",
     "home": "Home",
     "profile": "Profile",
+    "myGym": "My Gym",
     "search": "Search"
 }
