--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -41,5 +41,6 @@
     "changingLang": "กำลังเปลี่ยนภาษา",
     "home": "หน้าหลัก",
     "profile": "โปรไฟล์",
+    "myGym": "ยิมของฉัน",
     "search": "ค้นหา"
 }
