add firebase login to check if admin have gym

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -42,5 +42,6 @@
     "home": "Home",
     "profile": "Profile",
     "myGym": "My Gym",
-    "search": "Search"
+    "search": "Search",
+    "loadingGym": "Loading gym info"
 }
