--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -42,5 +42,6 @@
     "home": "หน้าหลัก",
     "profile": "โปรไฟล์",
     "myGym": "ยิมของฉัน",
-    "search": "ค้นหา"
+    "search": "ค้นหา",
+    "loadingGym": "กำลังโหลดข้อมูลยิม"
 }
