--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -43,5 +43,10 @@
     "profile": "โปรไฟล์",
     "myGym": "ยิมของฉัน",
     "search": "ค้นหา",
-    "loadingGym": "กำลังโหลดข้อมูลยิม"
+    "loadingGym": "กำลังโหลดข้อมูลยิม",
+    "noGym": "ไม่มีข้อมูลยิมของคุณ",
+    "createGym": "สร้างยิมใหม่",
+    "joinGym": "เข้าร่วมยิมอื่น",
+    "or": "หรือ",
+    "img": "รูปภาพ"
 }
