call api for officals gym name

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,5 +48,8 @@
     "createGym": "Create new gym",
     "joinGym": "Join existing gym",
     "or": "Or",
-    "img": "Image"
+    "img": "Image",
+    "cancel": "Cancel",
+    "done": "Done",
+    "selectOffical": "Select Offical gyms"
 }
