--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -48,5 +48,8 @@
     "createGym": "สร้างยิมใหม่",
     "joinGym": "เข้าร่วมยิมอื่น",
     "or": "หรือ",
-    "img": "รูปภาพ"
+    "img": "รูปภาพ",
+    "cancel": "ยกเลิก",
+    "done": "เสร็จสิ้น",
+    "selectOffical": "เลือกจากยิมมาตรฐาน"
 }
