complete create gym form with validation & init pick gym location screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -51,5 +51,8 @@
     "img": "Image",
     "cancel": "Cancel",
     "done": "Done",
-    "selectOffical": "Select Offical gyms"
+    "selectOffical": "Select Offical gyms",
+    "description": "Description",
+    "address": "Address",
+    "pickLocation": "Pick gym location"
 }
