get current user location with geolocator for picklocation screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -54,5 +54,7 @@
     "selectOffical": "Select Offical gyms",
     "description": "Description",
     "address": "Address",
-    "pickLocation": "Pick gym location"
+    "pickLocation": "Pick gym location",
+    "pleaseEnableLocation": "Please enable location services",
+    "refresh": "Refresh"
 }
