--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -56,5 +56,7 @@
     "address": "ที่อยู่",
     "pickLocation": "เลือกตำแหน่งยิม",
     "pleaseEnableLocation": "โปรดเปิดใช้งานระบุตำแหน่ง",
-    "refresh": "ลองใหม่อีกครั้ง"
+    "refresh": "ลองใหม่อีกครั้ง",
+    "selectThisLocation": "เลือกตำแหน่งนี้",
+    "ok": "ตกลง"
 }
