implement ui for creating new gym schedule

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -64,5 +64,10 @@
     "noDescription": "No description",
     "offical": "Offical",
     "schedule": "Schedule",
-    "noSchedule": "No schedule created yet"
+    "noSchedule": "No schedule created yet",
+    "createSchedule": "Create schedule",
+    "selectStarTime": "Class begins at",
+    "selectDuration": "Class duration",
+    "classCap": "Class capacity",
+    "mins": "minutes"
 }
