show information for today's schedule for customer gym page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -69,5 +69,10 @@
     "selectStarTime": "Class begins at",
     "selectDuration": "Class duration",
     "classCap": "Class capacity",
-    "mins": "minutes"
+    "mins": "minutes",
+    "joiningGym": "Joining gym",
+    "wrongGymId": "Wrong Gym ID",
+    "todaysSchedule": "Today's Schedule",
+    "capacity": "Capacity",
+    "duration": "Duration"
 }
