add firebase service for customer to reserve the schedule

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -74,5 +74,10 @@
     "wrongGymId": "Wrong Gym ID",
     "todaysSchedule": "Today's Schedule",
     "capacity": "Capacity",
-    "duration": "Duration"
+    "duration": "Duration",
+    "reserve": "Reserve",
+    "reserving": "Reserving spot",
+    "success": "Success!",
+    "reservedSpot": "Successfully reserved a spot",
+    "todayReserved": "Today Reserved"
 }
