--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -42,7 +42,7 @@
     "home": "หน้าหลัก",
     "profile": "โปรไฟล์",
     "myGym": "ยิมของฉัน",
-    "search": "ค้นหา",
+    "discover": "ค้นพบ",
     "loadingGym": "กำลังโหลดข้อมูลยิม",
     "noGym": "ไม่มีข้อมูลยิมของคุณ",
     "createGym": "สร้างยิมใหม่",
@@ -79,5 +79,5 @@
     "reserving": "กำลังจอง",
     "success": "สำเร็จ!",
     "reservedSpot": "จองเรียบร้อย",
-    "todayReserved": "จองแล้ววันนี้"
+    "reserved": "จองแล้ว"
 }
